--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Instagram Fonts Generator ― igfontgen.com</title>
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="Si_9O-i7SgHyJx-ayJsQGFFx5Uhe93Hu5eSrBdMp8x8" />
 <meta name="description" content="Copy and paste Fonts for instagram bio ❤️😻💯"><link rel="canonical" href="https://igfontgen.com/" />
 <meta name="theme-color" content="#fd1d1d">
 <meta name="author" content="Instagram Fonts">
